# recipe_binder

./: .gitflow  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  CONFIGURATION.md  INSTALLATION.md  Makefile  README-ENV.md  README.md  RELEASE_PLAN_1.0.0.md  USER_MANUAL.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: analyze-changes.md  bump-version.md  check-code.md  gitflow-finish.md  gitflow-start.md  new_module.md  plan-release.md  review-code.md  review-commits.md  run-tests.md  smart-commit.md  suggest-version.md
.claude/tools/: bootstrap_common.py  bootstrap_cpp.py  bootstrap_python.py  code_quality.py  module_scaffold.py  version_bump.py  yaml_to_py.py
.github/workflows/: ci.yml
docs/articles/: linkedin-article-plan.md  linkedin-post.md  linkedin-recipe-binder-article.md  recipe_copy.sh
recipe/.obsidian/: workspace.json
recipe/markdown/: Apple_Crisp_w_Oat_topping.md  CinnamonRolls.md  Pizza_Dough.md  Rhubarb.Strawberry.Blackberry.Cobbler.md  banana_bread.md  brussel_sprouts.md  calzone.md  carrot_salad.md  chocolate-avocado-mousse.md  chocolate-chip-cookies.md  dutch_baby.md  garlic-herb-bread.md  green-goddess-salad.md  homemade-pizza-dough.md  keto-strawberry-shortcake.md  meatloaf.md  new_recipe.md  perfect-pancakes.md  pot_pie_chicken.md  tamale_pie.md  thai-basil-chicken.md
recipe/templates/: default-card.yaml
src/recipe_fmt/: __init__.py  pipeline.py
src/recipe_fmt/generators/: __init__.py  pdf_generator.py
src/recipe_fmt/generators/pdf/: types.py
src/recipe_fmt/generators/pdf/base/: __init__.py  base_content_builder.py  base_layout_strategy.py  base_style_manager.py  component_base.py
src/recipe_fmt/generators/pdf/builders/: __init__.py  header_builder.py  ingredients_builder.py  instructions_builder.py  notes_builder.py  nutrition_builder.py
src/recipe_fmt/generators/pdf/interfaces/: __init__.py  content_builder.py  document_assembler.py  layout_strategy.py  style_manager.py
src/recipe_fmt/models/: __init__.py  config.py  recipe.py
src/recipe_fmt/nutrition/: __init__.py  __main__.py  calculator.py  ingredient_conversions.json
src/recipe_fmt/parsers/: __init__.py  markdown_parser.py  openai_client.py
src/recipe_fmt/templates/: __init__.py  template_engine.py  template_loader.py
src/recipe_fmt/utils/: __init__.py  file_manager.py  logging_setup.py
src/recipe_fmt/validators/: __init__.py  yaml_validator.py
tests/: test_recipe_fmt.py  test_sanity.py
tests/fixtures/: __init__.py  conftest.py  example_usage.py  file_utils.py  openai_responses.py  sample_recipes.py  template_data.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_file_manager.py  test_header_builder.py  test_ingredients_builder.py  test_instructions_builder.py  test_markdown_parser.py  test_notes_builder.py  test_nutrition_builder.py  test_openai_client.py  test_pdf_generator.py  test_template_engine.py  test_yaml_validator.py
